log
Wed, Apr 16, 2025  8:48:57 AM: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:58:28: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
         nuevoMapa->current = NULL;
                            ^
cc1.exe: all warnings being treated as errors
eeef3b7
Wed, Apr 16, 2025  8:52:57 AM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:58:28: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
         nuevoMapa->current = NULL;
                            ^
cc1.exe: all warnings being treated as errors
3d09577
Wed, Apr 16, 2025  8:53:04 AM: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:24: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     nuevoMapa->current = NULL;
                        ^
cc1.exe: all warnings being treated as errors
8052a82
Wed, Apr 16, 2025  8:55:58 AM: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:24: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     nuevoMapa->current = NULL;
                        ^
cc1.exe: all warnings being treated as errors
e162143
Wed, Apr 16, 2025  8:58:18 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
21b9134
Wed, Apr 16, 2025  9:06:48 AM: 
 hashmap.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
fe82c89
Wed, Apr 16, 2025  9:13:03 AM: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|5
total_score: 20/70
e451699
Sun, Apr 20, 2025  1:31:54 AM: 
 hashmap.c | 23 ++++++++++++++++++++---
 1 file changed, 20 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 30/70
f4e72a2
Sun, Apr 20, 2025  1:49:48 AM: 
 hashmap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 30/70
bdce0de
Sun, Apr 20, 2025  1:52:42 AM: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|4
total_score: 30/70
be26061
Sun, Apr 20, 2025  1:54:13 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
a05bc74
Sun, Apr 20, 2025  2:50:46 PM: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:120:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
hashmap.c:105:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
b1b4029
Sun, Apr 20, 2025  2:51:57 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:115:20: error: 'return' with a value, in function returning void [-Werror]
             return NULL;
                    ^~~~
hashmap.c:105:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
hashmap.c:120:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
hashmap.c:105:6: note: declared here
 void eraseMap(HashMap * map,  char * key) {
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
c82c67d
Sun, Apr 20, 2025  2:52:24 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
fe3e8ab
Sun, Apr 20, 2025  4:47:57 PM: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'firstMap':
hashmap.c:150:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
c3a53a9
Sun, Apr 20, 2025  4:48:45 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|2
total_score: 50/70
2f72269
Sun, Apr 20, 2025  4:55:49 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
ad6c506
Sun, Apr 20, 2025  5:39:28 PM: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  0|0
dd28bee
Sun, Apr 20, 2025  5:41:50 PM: 
 tests:  0|0
d98f3f9
Sun, Apr 20, 2025  5:43:45 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
52ca76d
Sun, Apr 20, 2025  5:47:32 PM: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  15|2
total_score: 50/70
7cdf8b9
Sun, Apr 20, 2025  5:51:25 PM: 
 hashmap.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  16|1
total_score: 60/70
ce89667
Sun, Apr 20, 2025  7:24:18 PM: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  15|2
total_score: 50/70
783123b
Sun, Apr 20, 2025  7:28:47 PM: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  0|0
06c1529
Sun, Apr 20, 2025  7:31:48 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d4d00c7
Sun, Apr 20, 2025  7:34:17 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
4187748
Sun, Apr 20, 2025  7:35:15 PM: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  15|2
total_score: 50/70
01abb98
Sun, Apr 20, 2025  7:37:58 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  15|2
total_score: 50/70
5777f0a
Sun, Apr 20, 2025  7:43:17 PM: 
 hashmap.c | 18 ++++++++++--------
 1 file changed, 10 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:184:1: error: expected ';' before '}' token
 }
 ^
40eb6a4
Sun, Apr 20, 2025  7:44:42 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:184:1: error: expected ';' before '}' token
 }
 ^
a9327f2
Sun, Apr 20, 2025  7:45:08 PM: 
 hashmap.c | 18 +-----------------
 1 file changed, 1 insertion(+), 17 deletions(-)
 tests:  15|2
total_score: 50/70
3564cf1
Sun, Apr 20, 2025  7:48:12 PM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  15|2
total_score: 50/70
19a422b
Sun, Apr 20, 2025  7:48:39 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|2
total_score: 50/70
78b5912
Sun, Apr 20, 2025  7:51:34 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|2
total_score: 50/70
d5f6865
Sun, Apr 20, 2025  7:52:50 PM: 
 hashmap.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
 tests:  16|1
total_score: 60/70
97f3f4a
Sun, Apr 20, 2025  8:08:52 PM: 
 hashmap.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
 tests:  0|0
773b1d6
